[project]
name = "thoughtful"
version = "0.1.0"
description = "This is a Python project for Andrew Wiser's interview with Thoughtful AI"
authors = [
    {name = "Andrew Wiser", email = "andrew.wiser85@gmail.com"}
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["shipping*"]

[dependency-groups]
dev = [
    "ruff>=0.1.0"
]

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
extend-select = ["E501"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["shipping"]
